# adhyeta

./: .gitignore  README.md  a-pub  adhyeta  adhyeta.bat  app.py  pyproject.toml  server.py  tool.py
data/orig/saṁskr̥tavyavahārasāhasrī/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  meta.json
data/orig/vālmīkirāmāyaṇam/: meta.json
data/orig/śrīsubrahmaṇyabhujaṅgam/: main.txt  meta.json
mod/: config.py  env.py  router.py  word.py  work.py
mod/lib/: __init__.py  bs_html.py  crypto.py  fs.py  git.py  mxml.py  sqlite_db.py  text.py  uuid.py
mod/lib/sxml/: __init__.py  filter.py  parser.py  ps.py  sxml_html.py  traverse.py
mod/raw/: ramayana.py
mod/repo/: db.py  works.py
mod/root/action/: sxml_count_words.py  sxml_html.py  sxml_list.py  sxml_publish_html.py  sxml_recognize_words.py  sxml_validate_doc.py  sxml_vyakaranam.py
mod/root/data/: __init__.py  doc.py  private.py  repo.py  user.py  word.py  y_classify.py
mod/root/http/: __init__.py  admin.py  auth.py  home.py  login.py  logout.py  router.py  sa.py  session.py  static.py
mod/tests/: test_data.py  test_lib.py  test_mxml.py  test_se.py  test_sxml.py  test_xml.py
mod/tool/: ocr.py  oklch.py  uuid.py
mod/tool/ext/: ramayana.py
mod/tool/www/: app.sxml  db.py  publish.py  publish_html.py  sxml_html.py  vfs.py
mod/tools/: adhyeta_consolidate.py  adhyeta_www.py  html.sxml  ocr.py  qp.py
mod/tools/www/: html.sxml  publish.py  repo.py
mod/util/: conf.py  fs.py  sxml.py  sxml_html.py  text.py
static/: app.template.sxml  index.sxml  login.sxml  www.template.sxml
www/: Caddyfile  index.html
www/a/: app.webmanifest.json  main.css  main.js  www.webmanifest.json
www/a/font/: annapurna.css  (+5 more)
(+51 files in other folders)
