[project]
name = "adhyeta"
version = "0.1.0"
description = "अध्येता is an application designed to improve language acquisition skills through the process of reading."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "uvicorn",
    "starlette",
    "apsw",
    "python-multipart",
    "indic-transliteration"
]
